[gd_scene load_steps=4 format=3 uid="uid://lightning_spell_001"]

[ext_resource type="Script" path="res://scenes/spells/effects/lightning_bolt.gd" id="1_bolt"]

[sub_resource type="Gradient" id="Gradient_flash"]
colors = PackedColorArray(0.7, 0.9, 1, 1, 0.5, 0.8, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_flash"]
gradient = SubResource("Gradient_flash")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="LightningBolt" type="Node2D"]
script = ExtResource("1_bolt")

[node name="GlowBolt" type="Line2D" parent="."]
width = 10.0
default_color = Color(0.5, 0.8, 1, 0.5)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="MainBolt" type="Line2D" parent="."]
width = 4.0
default_color = Color(0.8, 0.9, 1, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Flash" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = SubResource("GradientTexture2D_flash")

[node name="ImpactParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 30
lifetime = 0.5
one_shot = true
explosiveness = 0.8
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, 200)
initial_velocity_min = 100.0
initial_velocity_max = 300.0
scale_amount_min = 2.0
scale_amount_max = 5.0
color = Color(0.7, 0.9, 1, 1)
